Добавление попапа и немного подправили вид самого сайта

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         </header>
         <main class="content">
             <section class="menu-popup">
-                <div class="menu-popup-div menu-popup__name">1</div>
-                <div class="menu-popup-div menu-popup__foto">2</div>
+                <div class="menu-popup-div menu-popup__name">😍</div>
+                <div class="menu-popup-div menu-popup__foto">👀️</div>
             </section>
         </main>
     </div>
@@ -28,14 +28,18 @@
         <div class="popup__block">
             <div class="popup__box">
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <input class="popup__input" type="text" value="Введите ваше имя" placeholder="Имя">
+                <input class="popup__input popup__input-name" type="text" value="Введите ваше имя" placeholder="Имя">
                 <span class="popup__span"></span>
-                <input class="popup__input" type="text" value="Расскажите о себе" placeholder="Биогафия">
+                <input class="popup__input popup__input-job" type="text" value="Расскажите о себе" placeholder="Биогафия">
                 <span class="popup__span"></span>
                 <button class="popup__button">Сохранить</button>
             </div>
         </div>
-        <button class="popup__button-close">Х</button>
+        <button class="popup__button-close">❌</button>
+    </section>
+    <section class="about">
+<h2 class="about__title">Anton</h2>
+<h2 class="about__job">Программист</h2>
     </section>
 </body>
 
