validate готов. Кнопа реагирует на input

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>MyPolegon</title>
     <link rel="stylesheet" href="pages/index.css">
     <script src="scripts/add.js" defer></script>
+    <script src="scripts/validate.js" defer></script>
 </head>
 
 <body class="body">
@@ -27,20 +28,44 @@
     <section class="popup popuo_user">
         <div class="popup__block">
             <div class="popup__box">
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <input class="popup__input popup__input-name" type="text" value="Введите ваше имя" placeholder="Имя">
-                <span class="popup__span"></span>
-                <input class="popup__input popup__input-job" type="text" value="Расскажите о себе" placeholder="Биогафия">
-                <span class="popup__span"></span>
-                <button class="popup__button">Сохранить</button>
+
+                <form action="#" class="form form-user" novalidate>
+                    <h2 class="popup__title">Редактировать профиль</h2>
+
+                    <input id="form-name" class="form__input popup__input-name" type="text" placeholder="Имя"
+                        minlength="2" maxlength="40" required value="">
+                    <span class="form-name-error form__input-error"></span>
+
+                    <input id="form-job" class="form__input popup__input-job" type="text" placeholder="Биогафия"
+                        minlength="2" maxlength="40" required value="">
+                    <span class="form-job-error form__input-error"></span>
+
+                    <button class="popup__button" type="submit">Сохранить</button>
+                </form>
+
             </div>
         </div>
-        <button class="popup__button-close">❌</button>
+        <button class="popup__button-close"></button>
     </section>
     <section class="about">
-<h2 class="about__title">Anton</h2>
-<h2 class="about__job">Программист</h2>
+        <h2 class="about__title">Anton</h2>
+        <h2 class="about__job">Программист</h2>
+
+        <!-- <form action="#" class="form form-test" novalidate>
+            <label class="form__lable">
+                Введите адрес электронной почты
+                <input id="form-input" type="email" class="form__input form__input-type-email" required>
+                <span class="form-input-error form__input-error"></span>
+            </label>
+            <button class="form__submit" type="submit">Войти</button>
+        </form>
     </section>
+
+    <section class="btn">
+        <button data-num="1" class="btn">Click 1</button>
+        <button data-num="2" class="btn">Click 2</button>
+        <button data-num="3" class="btn">Click 3</button>
+    </section> -->
 </body>
 
 </html>
