Исправление кнопки закрытия popup

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="page">
         <header class="header">
             <div class="header__box">
-                <h1 class="header__title">Научится учиться..</h1>
+                <h1 class="header__title">Научиться учиться..</h1>
             </div>
         </header>
         <main class="content">
@@ -24,34 +24,35 @@
                 <div class="menu-popup-div menu-popup__foto">👀️</div>
             </section>
         </main>
-    </div>
-    <section class="popup popuo_user">
-        <div class="popup__block">
-            <div class="popup__box">
+        <section class="popup popuo_user">
+            <div class="popup__block">
+                <div class="popup__box">
 
-                <form action="#" class="form form-user" novalidate>
-                    <h2 class="popup__title">Редактировать профиль</h2>
+                    <form action="#" class="form form-user" novalidate>
+                        <h2 class="popup__title">Редактировать профиль</h2>
 
-                    <input id="form-name" class="form__input popup__input-name" type="text" placeholder="Имя"
-                        minlength="2" maxlength="40" required value="">
-                    <span class="form-name-error form__input-error"></span>
+                        <input id="form-name" class="form__input popup__input-name" type="text" placeholder="Имя"
+                            minlength="2" maxlength="40" required value="">
+                        <span class="form-name-error form__input-error"></span>
 
-                    <input id="form-job" class="form__input popup__input-job" type="text" placeholder="Биогафия"
-                        minlength="2" maxlength="40" required value="">
-                    <span class="form-job-error form__input-error"></span>
+                        <input id="form-job" class="form__input popup__input-job" type="text" placeholder="Биогафия"
+                            minlength="2" maxlength="40" required value="">
+                        <span class="form-job-error form__input-error"></span>
 
-                    <button class="popup__button" type="submit">Сохранить</button>
-                </form>
 
+                        <button class="popup__button" type="submit">Сохранить</button>
+                        <button class="popup__button-close"></button>
+                    </form>
+
+                </div>
             </div>
-        </div>
-        <button class="popup__button-close"></button>
-    </section>
-    <section class="about">
-        <h2 class="about__title">Anton</h2>
-        <h2 class="about__job">Программист</h2>
 
-        <!-- <form action="#" class="form form-test" novalidate>
+        </section>
+        <section class="about">
+            <h2 class="about__title">Anton</h2>
+            <h2 class="about__job">Программист</h2>
+    </div>
+    <!-- <form action="#" class="form form-test" novalidate>
             <label class="form__lable">
                 Введите адрес электронной почты
                 <input id="form-input" type="email" class="form__input form__input-type-email" required>
