--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MyPolegon</title>
     <link rel="stylesheet" href="pages/index.css">
     <script src="scripts/add.js" defer></script>
-    <script src="scripts/validate.js" defer></script>
+    <script src="scripts/test.js" defer></script>
 </head>
 
 <body class="body">
