--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="pages/index.css">
     <script src="scripts/add.js" defer></script>
     <script src="scripts/validate.js" defer></script>
+    <script src="scripts/conteiner.js" defer></script>
 </head>
 
 <body class="body">
